<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <!--
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="Gallery" />
        -->

        <item
            android:id="@+id/nav_self_info"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/myinfo" />
        <item
            android:id="@+id/nav_car"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/mycar" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/myorder"
            />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/mytools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/myshare" />
        </menu>
    </item>

</menu>
