<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_local_gas_station_white_24dp"
        android:title="@string/menu_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_notification"
        android:icon="@mipmap/ic_notifications"
        android:title="@string/menu_notifications"
        app:showAsAction="ifRoom" />

    <group>
        <item
            android:id="@+id/action_item2"
            android:icon="@drawable/ic_edit_black_18dp"
            android:title="@string/item_02"
            app:showAsAction="withText"/>

        <item
            android:id="@+id/action_item3"
            android:icon="@drawable/ic_edit_black_18dp"
            android:title="Logout"
            app:showAsAction="collapseActionView"/>
    </group>

</menu>
